# starter-blockchain

./: .gitignore  README.md
bc-project/: README.rst  pyproject.toml
eth-project/: .envrc  README.md  README.rst  env.txt  makefile  pyproject.toml  requirements.in  requirements.txt  requirements2.in  sample-env.bat  sample.envrc
eth-project/src/client/: 1_transactions.py  2_deploy_contract.py  deploy_contract.py  example1.py
eth-project/src/solidity/: hucha_final.sol
examples/: example_hash.py  example_nonce.py
examples/file_digest/: python_311.py  python_38.py
examples/nft/: 1.json  2.json  VicenteNFTipfs_abi.json  VicenteNFTipfs_metadata_1.json  VicenteNFTipfs_metadata_2.json
examples/notebooks/: words_simple.ipynb
examples/solidity/: SupplyChain.sol  VicenteCoin.sol  VicenteNFT.sol  VicenteNFTipfs.sol  bytes32ToStr.sol  coin.sol  dex.sol  dex2.sol  insurance.sol  insurance2.sol  insurance3.sol  pay_example.sol
examples/solidity/workspace-eth/contracts/: v10_Bid.sol  v4_Example_books.sol
examples/solidity2/: 1_Storage.sol  v11_Piggybank.sol  v12_Piggybank2.sol  v5_Example_inheritance.sol  v6_Example_secretvault.sol
examples/solidity3/: crowdsale.sol  dao.sol  escrow.sol  nft_royalties.sol  supply_chain.sol  timelock.sol
examples/solidity4/: 4_stablecoin.sol  7_identity.sol  8_markets.sol  9_lending.sol
workspace-eth/contracts/: 0_Amounts.sol  v3b_Bytes_String.sol  v7_Example_tokens.sol
